[update] - reconfiguração do pom.xml e definição do novo template do .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,12 @@
-# ide plataform
+# comentário
 .idea/
-nbproject/
 .vscode/
-*.iml
 
-
-# Compiled class file
-out/
+# comentário
 gen/
-logs/
-out/*.class
-gen/*.class
-logs/*.log
+target/
+out/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# comentário
+*.log
+*.iml
