--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>br.com.uri</groupId>
+  <groupId>br.com.urionline</groupId>
   <artifactId>torneio</artifactId>
   <name>torneio</name>
   <url>http://www.example.com</url>
