--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>br.com.urionline</groupId>
+  <groupId>br.com.phmiranda</groupId>
   <artifactId>torneio</artifactId>
   <name>torneio</name>
-  <url>http://www.example.com</url>
+  <url>https://github.com/phmiranda/torneio</url>
   <version>1.0.0</version>
 
   <properties>
